Replace Guava classes (#2215)
Replace Guava classes